Updated pnc-api dependency version